--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm next",
-    "lint": "pnpm rome format components/ --write"
+    "dev": "pnpm next"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +18,5 @@
     "nextra-theme-blog": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "rome": "12.0.0"
   }
 }
